发放优惠券全选问题, 修改样式

--- a/weapp/mall/templates/mall/editor/promotion/create_issuing_coupons_record.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_issuing_coupons_record.html
@@ -8,6 +8,12 @@
 .xui-filterPanel .xui-col{
     float: inherit;
 }
+.xa-vip-username .xui-close{
+    font-size: 16px;
+}
+.xa-vip-username:hover .xui-close{
+    display: block;
+}
 </style>
 {% endblock %}
 {% block content-panel %}
