--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -176,6 +176,12 @@
                             return;
                         }
 
+                        // 外部链接不做处理
+                        if (oldHref.indexOf('http://') == 0 || 
+                            oldHref.indexOf('https://') == 0 ){
+                            return;
+                        };
+
                         // 老营销工具，优惠劵、扫码……   加入from_h5=1 其它不做处理
                         if (oldHref.indexOf('workspace_id=market_tool:') !== -1) {
                             $link.attr('href', oldHref+'&from_h5=1');
@@ -290,7 +296,6 @@
                     if( url.indexOf('http://') == 0 || url.indexOf('https://') == 0){
                         window.location.href = url;
                     }else{
-                        alert(url);
                         window.location.href = "http://"+ window.location.host + url;
                     }
                 }
