1、用户反馈的手机端样式 2、增加清除百宝箱redis缓存的command

--- a/weapp/termite/static/termite_js/app/component/appkit/dropdownbox/dropdownbox.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/dropdownbox/dropdownbox.html
@@ -10,7 +10,7 @@
         <div class="wui-i-inputContainer xa-inputControl" data-input-type="producttype" data-input-name="{{component.model.title}}" data-control-type="appkit.dropdownbox">
             <a id="freedback_type" data-role="button" >
                 <h1 class="wui-i-title {% if component.model.is_mandatory == "true" %}xui-mandatory{% endif %}">{{component.model.title}}</h1>
-                <span class="type_name" data-product="" data-validate="require-notempty-span::请选择{{component.model.title}}" style="color: #666;margin-left: 10px;"></span>
+                <span class="type_name" data-product="" data-validate="require-notempty-span::请选择{{component.model.title}}" ></span>
                 <span id="icon" class=" arrow_down"></span>
             </a>
             <div class="xui-dropmenu" style="display: none">
