--- a/weapp/apps/customerized_apps/exsurvey/templates/webapp/m_exsurvey.html
+++ b/weapp/apps/customerized_apps/exsurvey/templates/webapp/m_exsurvey.html
@@ -13,6 +13,13 @@
 {% block js %}
 <script type="text/javascript">
 $(document).ready(function() {
+    var $freedback_type = $('#freedback_type');
+    if ($freedback_type){
+        var type_title_width  =  $freedback_type.find('.wui-i-title').width();
+        var padding_width = Number($freedback_type.css('padding-left').split('px')[0]) + Number($freedback_type.css('padding-right').split('px')[0]);
+        var freedback_type_width =  $freedback_type.width()-padding_width-2;
+        $('.type_name').width(freedback_type_width-type_title_width-15);
+    }
     var json_product = $('#json_product').html();
     $('.xa-select-type').append(json_product);
     if (json_product == ""){
