--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -284,7 +284,7 @@
                         }, 1500);
                     },
                     error: function (data) {
-                        resultDialog.render(false, '签到失败~');
+                        resultDialog.render(false, data.errMsg);
                     }
                 });
 
