--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -207,15 +207,19 @@
 					{{if (field.type == 'textarea')}}
 					<div class="propertyGroup_property_textareaField">
 						{{if field.displayName}}
-						<div class="propertyGroup_property_label">${field.displayName}</div>
+						<div class="propertyGroup_property_label {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
 						{{/if}}
 						<div class="propertyGroup_property_input pl5" style="width: 90%; margin: 5px auto;">
-							<textarea class="" {{if field.placeholder}}placeholder="${field.placeholder}"{{/if}} style="height: 100px; width: 95%;" data-field="${field.name}" {{if field.maxLength}}maxlength="${field.maxLength}"{{/if}}>${model.get(field.name)}</textarea>
+							<textarea class="" {{if field.placeholder}}placeholder="${field.placeholder}"{{/if}}
+							style="height: 100px; width: 95%;" data-field="${field.name}"
+							{{if field.validate}}{{html field.validate}}{{/if}}
+							{{if field.maxLength}}maxlength="${field.maxLength}"{{/if}}>${model.get(field.name)}</textarea>
 							{{if field.help}}
 							<div style="color: #888;">
 								{{html field.help.replace(/\n/g, "<br/>")}}
 							</div>
 							{{/if}}
+							<div class="errorHint"></div>
 						</div>
 					</div>
 					{{/if}}
@@ -528,6 +532,135 @@
 
                     </div>
                     {{/if}}
+
+                    {{if (field.type == 'red_packet_selector')}}
+                    <div class="propertyGroup_property_redPacketSelectorField propertyGroup_property_horizontalField">
+                        <div class="propertyGroup_property_label star_show">${field.displayName}</div>
+                        <div class="propertyGroup_property_input xa-thirdPartyPlugin" data-plugin="red_packet_selector"">
+							{{each(fi, radio) field.source}}
+								<input class="xa-red-packet-selector" type="radio" data-field="${field.name}" name='${field.name}' {{if model.get(field.name) == radio.value}}checked="checked"{{/if}} value="${radio.value}" />${radio.name}
+							{{/each}}
+						</div>
+                    </div>
+                    <div class="propertyGroup_property_redPacketSelectorField_random {{if model.get(field.name) == 'regular'}}xui-hide{{/if}}">
+						<div class="propertyGroup_property_redPacketSelectorField propertyGroup_property_horizontalField">
+							<div class="propertyGroup_property_label star_show">总金额</div>
+							<div class="propertyGroup_property_input">
+								<input
+									type="text"
+									class="input-small xui-propertyGroup-input"
+									style="width: 80px;"
+									id="random_total_money"
+									name="random_total_money"
+									data-validate="require-positive-int::请输入正整数"
+									value="${component.model.get('random_total_money')}"
+									data-field="random_total_money"
+									placeholder="填写金额"/>元
+								<div class="errorHint"></div>
+							</div>
+						</div>
+						<div class="propertyGroup_property_redPacketSelectorField propertyGroup_property_horizontalField">
+							<div class="propertyGroup_property_label star_show">红包个数</div>
+							<div class="propertyGroup_property_input">
+								<input
+									type="text"
+									class="input-small xui-propertyGroup-input"
+									style="width: 80px;"
+									id="random_packets_number"
+									name="random_packets_number"
+									data-validate="require-positive-int::请输入正整数"
+									value="${component.model.get('random_packets_number')}"
+									data-field="random_packets_number"
+									placeholder="填写个数"/>个
+									<span style="color: #888;">每人可以领1个，金额随机且不超过总金额</span>
+								<div class="errorHint"></div>
+							</div>
+						</div>
+					</div>
+					<div class="propertyGroup_property_redPacketSelectorField_regular {{if model.get(field.name) == 'random'}}xui-hide{{/if}}">
+						<div class="propertyGroup_property_redPacketSelectorField propertyGroup_property_horizontalField">
+							<div class="propertyGroup_property_label star_show">红包个数</div>
+							<div class="propertyGroup_property_input">
+								<input
+									type="text"
+									class="input-small xui-propertyGroup-input"
+									style="width: 80px;"
+									id="regular_packets_number"
+									name="regular_packets_number"
+									data-validate="require-positive-int::请输入正整数"
+									value="${component.model.get('regular_packets_number')}"
+									data-field="regular_packets_number"
+									placeholder="填写个数"/>个
+								<div class="errorHint"></div>
+							</div>
+						</div>
+						<div class="propertyGroup_property_redPacketSelectorField propertyGroup_property_horizontalField">
+							<div class="propertyGroup_property_label star_show">单个金额</div>
+							<div class="propertyGroup_property_input">
+								<input
+									type="text"
+									class="input-small xui-propertyGroup-input"
+									style="width: 80px;"
+									id="regular_per_money"
+									name="regular_per_money"
+									data-validate="require-float::请输入正整数或小数"
+									value="${component.model.get('regular_per_money')}"
+									data-field="regular_per_money"
+									placeholder="填写金额"/>元
+									<span style="color: #888;">每人可以领1个，金额相同且不超过总金额</span>
+								<div class="errorHint"></div>
+							</div>
+						</div>
+					</div>
+                    {{/if}}
+
+					{{if (field.type == 'money_range_selector')}}
+					<div class="propertyGroup_property_moneyRangeSelectorField propertyGroup_property_horizontalField">
+						<div style="min-height: 50px;" class="propertyGroup_property_label mr5 {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
+						<div class="propertyGroup_property_input pl5 xa-thirdPartyPlugin" data-plugin="moneyrange">
+							<input
+								type="hidden"
+								value="${component.model.get(field.name)}"
+								name="${field.name}"
+								data-field="${field.name}"
+								class="xa-moneyRangeInput xa-valueInput"
+								{{if field.validate}}data-validate="${field.validate}"{{/if}} />
+							<input
+								style="width:50px!important;"
+								type="text"
+								class="input-small xui-propertyGroup-input xui-inline ml5 form-control"
+								id="start_money"
+								name="start_money"
+								value="${component.model.get('start_money')}"
+								data-field="start_money"
+								data-validate="require-float::请输入正整数或小数"
+                                data-max-el="#end_money"/>
+							-
+							<input
+								style="width:50px!important;"
+								type="text"
+								class="input-small xui-propertyGroup-input xui-inline ml5 form-control"
+								id="end_money"
+								name="end_money"
+								value="${component.model.get('end_money')}"
+								data-field="end_money"
+								data-validate="require-float::请输入正整数或小数"
+								data-min-el="#start_money" />元
+							{{if field.groupHelp }}
+								<span id="${field.groupHelp.id}" class="${field.groupHelp.className}">
+								{{if field.groupHelp.link }}
+								<a id="${field.groupHelp.link.id}" class="${field.groupHelp.link.className}" data-func="${field.groupHelp.link.handler}" >${field.groupHelp.link.text}</a>
+								{{/if}}
+
+								{{if field.groupHelp.tip }}
+									<a role="button" tabindex="0" class="groupHelp_tip" data-container="body" data-trigger="focus" data-toggle="popover" data-placement="bottom" data-content="${field.groupHelp.tip.text}">&#63;</a>
+								{{/if}}
+								</span>
+							{{/if}}
+							<div class="errorHint pl5"></div>
+						</div>
+					</div>
+					{{/if}}
 
 					{{if (field.type == 'dynamic-generated-control')}}
 					{{if field.displayName}}
