--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -1,12 +1,12 @@
 {% extends "content_base_v2.html" %}
 
 {% block content-panel %}
-<div class="xui-PowerMesAppPage xui-appPage-commonStyle">
+<div class="xui-RedPacketsAppPage xui-appPage-commonStyle">
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
-			<li class="active">微助力</li>
+			<li class="active">拼红包</li>
 		</ul>
 	</div>
 	
@@ -69,16 +69,16 @@
 	
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
-			<a href="/apps/powerme/powerme/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建微助力
+			<a href="/apps/red_packet/red_packet/" class="btn btn-success fr">
+				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建拼红包
 			</a>
 		</div>
 		
 		<div 
 			class="panel-body panel-table p0"
 			data-ui-role="advanced-table" 
-			data-app="apps/powerme" 
-			data-resource="powermes" 
+			data-app="apps/red_packet"
+			data-resource="red_packets"
 			data-template-id="#table" 
 			data-enable-paginator="true" 
 			data-enable-sort="false" 
@@ -119,7 +119,7 @@
 				   <a 
 					class="xui-ellipsisFox" 
 					limit="15" 
-					href="/apps/powerme/powerme/?id=${item.id}&related_page_id=${item.related_page_id}"
+					href="/apps/red_packet/red_packet/?id=${item.id}&related_page_id=${item.related_page_id}"
 					style="text-overflow: -o-ellipsis-lastline;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;"
 					>
 						${item.name}
@@ -141,9 +141,9 @@
 					${item.total_power}
 				</td>
 				<td>
-				    <a href="/apps/powerme/powerme_participances/?id=${item.id}" class="ml5" target="_blank">查看</a>
+				    <a href="/apps/red_packet/red_packet_participances/?id=${item.id}" class="ml5" target="_blank">查看</a>
 				    <a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id} target="_blank">预览</a>
-				    <a href="javascript:void(0);" class="ml5 xa-link-copy" data-clipboard-text="/m/apps/powerme/m_powerme/?webapp_owner_id=${item.owner_id}&id=${item.id}">复制链接</a>
+				    <a href="javascript:void(0);" class="ml5 xa-link-copy" data-clipboard-text="/m/apps/red_packet/m_red_packet/?webapp_owner_id=${item.owner_id}&id=${item.id}">复制链接</a>
 					{{if (item.status === '已结束')}}
 					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
 					{{/if}}
@@ -193,8 +193,8 @@ $(document).ready(function() {
 			msg: '确定删除？',
 			confirm: function() {
 				W.getApi().call({
-					app: 'apps/powerme',
-					resource: 'powerme',
+					app: 'apps/red_packet',
+					resource: 'red_packet',
 					method: 'delete',
 					args: {
 						id: id
@@ -215,8 +215,8 @@ $(document).ready(function() {
 		var $el = $(event.target);
 		var id = $el.data('id');
 		W.getApi().call({
-			app: 'apps/powerme',
-			resource: 'powerme_status',
+			app: 'apps/red_packet',
+			resource: 'red_packet_status',
 			method: 'post',
 			args: {
 				id: id,
@@ -235,7 +235,7 @@ $(document).ready(function() {
 	$('body').delegate('.xa-preview', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
-		var previewUrl = '/m/apps/powerme/m_powerme/?woid='+W.mid+'&id='+id;
+		var previewUrl = '/m/apps/red_packet/m_red_packet/?woid='+W.mid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
 
@@ -243,15 +243,15 @@ $(document).ready(function() {
         console.log(111);
         var record_id = $(this).attr('data-id');
         W.getApi().call({
-			app: 'apps/powerme',
-			resource: 'powerme_status',
+			app: 'apps/red_packet',
+			resource: 'red_packet_status',
 			method: 'put',
 			args: {
 				id: record_id
 			},
 			success: function(data) {
 				var page_id = data.page_id;
-                location.href = location.host+'/powerme/powerme/?id='+record_id+'&related_page_id='+page_id;
+                location.href = location.host+'/red_packet/red_packet/?id='+record_id+'&related_page_id='+page_id;
 			},
 			error: function(response) {
 				W.showHint('error', '更新状态失败！');
