--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -592,7 +592,7 @@
                                     <div class="propertyGroup_property_input">
                                         <input
                                             type="text"
-                                            style="width:${dynamicComponentField.size};"
+                                            style="width:${dynamicComponentField.size};position:relative;z-index:1000"
                                             class="input-small xui-propertyGroup-input"
                                             data-field="${dynamicComponentField.name}"
                                             value="{{if dynamicComponentField.placeholder != dynamicComponent.model.get(dynamicComponentField.name)}}${dynamicComponent.model.get(dynamicComponentField.name)}{{/if}}"
@@ -601,7 +601,7 @@
                                             {{if dynamicComponentField.validate}}{{html dynamicComponentField.validate}}{{/if}} />
                                         {{if dynamicComponentField.annotation}}
                                         <span style="color: #888;">
-                                            {{html dynamicComponentField.annotation}}
+                                               {{html dynamicComponentField.annotation}}
                                         </span>
                                         {{/if}}
                                         <div class="errorHint"></div>
