--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -97,6 +97,8 @@
 							parent.W.design.DesignPageView = page;
 							if (parent.W.autoSelectCid && parent.W.autoSelectCid > 0) {
                             	$('.xa-designPage').find("div[data-cid='"+parent.W.autoSelectCid+"']").get(0).click();
+                                W.Broadcaster.trigger('page:rendered');
+
 							}
                             if(parent.W.hideActionPanel){
                                 $('.xa-actionPanel').find('.xa-add, .xa-delete').hide();
